--- a/src/app/components/iconos-sociales/iconos-sociales.component.html
+++ b/src/app/components/iconos-sociales/iconos-sociales.component.html
@@ -15,8 +15,8 @@
         <div class="col-2">
             <img src="\assets\twitter.png" alt="Logo Twitter" class="LRS">
         </div>
-        <div class="col-1">
-            <img src="\assets\login.png" alt="Logo Login" class="LRS">
+        <div class="col-2">
+            <img src="\assets\login.png" alt="Logo Login" class="Log">
         </div>
     </div>
 
