--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,17 @@
-<app-header></app-header>
+<app-header>
+
+</app-header>
 
 <app-banner></app-banner>
+
+<app-acerca-de></app-acerca-de>
+
+<app-trabajos></app-trabajos>
+
+<app-experiencia></app-experiencia>
+
+<app-proyectos></app-proyectos>
+
+<app-footer></app-footer>
 
 <router-outlet></router-outlet>
